Update RetailMemoryStress.java